# AccelerateHs_Bugs

./: accelerateBugs.cabal  stack.yaml
src/: FoldSegBug.hs  SimplifierGrowthBug.hs
