name: accelerateBugs
version: 0.0.0.0.1
cabal-version: >=1.10
build-type: Simple
license: BSD3

executable foldSegBug
    main-is: FoldSegBug.hs
    build-depends:
        base >=4.7 && <5,
        accelerate >=1.2,
        accelerate-llvm-ptx >=1.2
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

executable simplifierGrowthBug
    main-is: SimplifierGrowthBug.hs
    build-depends:
        base >=4.7 && <5,
        accelerate >=1.2,
        accelerate-llvm-ptx >=1.2
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

